test/data/syntax-errors/bad-statement.iki
var x: int;
read x;
9 - 2;
write x;
